--- a/app/src/main/res/layout/timer_main.xml
+++ b/app/src/main/res/layout/timer_main.xml
@@ -119,12 +119,12 @@
             app:layout_constraintTop_toBottomOf="@+id/task_name">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/pomodoro_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="right"
-                android:text="／"
+                android:text="@{timerVM.workedPomo + `／` + timerVM.forecastPomo}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_name" />
@@ -138,8 +138,8 @@
                 android:layout_weight="1"
                 android:text="ポモドーロ終了"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView7"
-                app:layout_constraintTop_toTopOf="@+id/textView7" />
+                app:layout_constraintStart_toEndOf="@+id/pomodoro_count"
+                app:layout_constraintTop_toTopOf="@+id/pomodoro_count" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
