--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="org.apache.commons.lang3.StringUtils"/>
+        <import type="android.view.View"/>
         <variable
             name="todolistVM"
             type="com.mochoi.pomer.viewmodel.TodolistVM"/>
@@ -49,21 +51,65 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/colorAccent" />
 
+            <TextView
+                android:id="@+id/todays_pomo_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/recycler"
+                android:layout_below="@+id/title"
+                android:layout_alignStart="@+id/move_backlog"
+                android:gravity="center"
+                android:text="予定ポモドーロ　あと："
+                android:visibility="@{StringUtils.isBlank(todolistVM.todaysPomodoroAlert) ? View.VISIBLE : View.INVISIBLE}" />
+
+            <TextView
+                android:id="@+id/todays_pomodoro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@+id/todays_pomo_text"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:text="@{`` + todolistVM.todaysPomodoro}"
+                android:visibility="@{StringUtils.isBlank(todolistVM.todaysPomodoroAlert) ? View.VISIBLE : View.INVISIBLE}"
+                />
+
+            <ImageView
+                android:id="@+id/tomato"
+                android:layout_width="33dp"
+                android:layout_height="32dp"
+                android:layout_alignStart="@+id/todays_pomodoro"
+                android:layout_alignTop="@+id/todays_pomodoro"
+                android:layout_alignEnd="@+id/todays_pomo_unknown"
+                android:visibility="@{StringUtils.isBlank(todolistVM.todaysPomodoroAlert) ? View.VISIBLE : View.GONE}"
+                app:srcCompat="@drawable/tomato" />
+
+            <TextView
+                android:id="@+id/todays_pomo_unknown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_alignStart="@+id/todays_pomo_text"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@{todolistVM.todaysPomodoroAlert}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler"
                 todo_items="@{todolistVM.items}"
                 android:layout_width="match_parent"
-                android:layout_height="408dp"
-                android:layout_below="@+id/title"
-                android:layout_alignBottom="@+id/add_task_fragment"
+                android:layout_height="300dp"
+                android:layout_above="@+id/button2"
+                android:layout_below="@+id/todays_pomodoro"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="90dp"
-                app:layout_constraintEnd_toEndOf="@+id/add_task_fragment"
-                app:layout_constraintStart_toStartOf="@+id/title">
+                android:layout_marginBottom="8dp"
+                app:layout_constraintEnd_toEndOf="@+id/add_task_fragment">
 
             </android.support.v7.widget.RecyclerView>
 
@@ -85,7 +131,7 @@
                 android:layout_alignTop="@+id/imageView"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="-16dp"
+                android:layout_marginBottom="-16dp"
                 android:layout_toEndOf="@+id/imageView"
                 android:onClick="moveTaskToBacklog"
                 android:text="Backlogへ戻す"
